# test-task-payment-system

./: README.md  pyproject.toml
src/core/: .envExample  urls.py
src/core/settings/: base.py
src/core/settings/thrid_party/: drf.py  stripe.py  swagger.py
src/payment/: admin.py  models.py  services.py  urls.py  views.py
src/payment/migrations/: 0001_initial.py  0002_order.py
src/payment/templates/payment/: item.html  order.html
