[tool.poetry]
name = "paymentsystem"
version = "0.1.0"
description = ""
authors = ["Bol4onok <95026332+MihailGulkin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
stripe = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
